# cl_xml_namespace_read_macro

./: CMakeLists.txt  cl-xml-namespace-read-macro.asd  package.xml
asdf/: cl-xml-namespace-read-macro.asd
src/: package.lisp  read-macro.lisp
